<resources>
    <string name="app_name">드림윙</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="join_name">회원가입</string>
    <string name="id">아이디</string>
    <string name="pwd">비밀번호</string>
    <string name="pwd_confirm">비밀번호 확인</string>
    <string name="name">이름</string>
    <string name="phone">전화번호</string>
    <string name="ok">확인</string>
    <string name="join_done">회원가입</string>

    <string name="home_support_comment1">우리가 함께 나눈</string>
    <string name="home_support_comment2">사랑의 후원</string>
    <string name="home_mission_comment">함께 참여하는 미션</string>
    <string name="home_support_comment">아이들의 꿈에 날개를 펼쳐주세요</string>
    <string name="walk_title">드림워크</string>
    <string name="quiz_title">데일리 퀴즈</string>
    <string name="volunteer_title">봉사활동</string>
    <string name="view_all">전체보기</string>
    <string name="walk_description">걸음이 모여 만드는 따뜻한 기적</string>
    <string name="quiz_description">매일 매일 복지 퀴즈</string>
    <string name="volunteer_description">봉사활동 인증 후 포인트 적립</string>
    <string name="title_activity_walk">WalkActivity</string>
    <string name="wing">WING</string>
    <string name="login">로그인</string>

    <string name="walk_4000">4,000</string>
    <string name="walk_7000">7,000</string>
    <string name="walk_10000">10,000</string>
    <string name="certificate_guide">• 활동 이미지를 업로드해 주세요. \n• 관리자 검토 후 5,000윙이 지급돼요.</string>
    <string name="update">회원 정보 수정</string>
    <color name="sub_lightGray1">#F1EFE6</color>
    <color name="sub_lightGray2">#E7E9EA</color>
    <string name="pwd_no_match">비밀번호가 일치하지 않습니다.</string>
    <string name="need_login">로그인이 필요합니다.</string>
    <string name="profile_update">프로필 수정</string>
    <string name="user_total_support_wing">총 후원 WING</string>
    <string name="check_details">내역 조회</string>
    <string name="my_support_details">후원 내역</string>
    <string name="my_volunteer_details">봉사활동 내역</string>
    <string name="logout">로그아웃</string>
</resources>