<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp">


    <androidx.cardview.widget.CardView
        android:id="@+id/card_walk"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginTop="48dp"
        app:cardBackgroundColor="@color/sub_blue"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="@+id/card_quiz"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/card_quiz"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp">

            <TextView
                android:id="@+id/walk_description"
                style="@style/mission_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/walk_description"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@id/walk_icon"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/walk_title"
                style="@style/mission_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/walk_title"
                app:layout_constraintEnd_toStartOf="@id/walk_icon"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/walk_description" />

            <ImageView
                android:id="@+id/walk_icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_mission_walk"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_quiz"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginTop="40dp"
        app:cardBackgroundColor="@color/sub_blue2"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="@+id/card_volunteer"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/card_volunteer"
        app:layout_constraintTop_toBottomOf="@id/card_walk">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp">

            <TextView
                android:id="@+id/quiz_description"
                style="@style/mission_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/quiz_description"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@id/quiz_icon"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/quiz_title"
                style="@style/mission_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/quiz_title"
                app:layout_constraintEnd_toStartOf="@id/quiz_icon"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/quiz_description" />

            <ImageView
                android:id="@+id/quiz_icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_mission_quiz"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/card_volunteer"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginTop="40dp"
        app:cardBackgroundColor="@color/sub_blue3"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_quiz"
        app:layout_constraintVertical_bias="0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp">

            <TextView
                android:id="@+id/volunteer_description"
                style="@style/mission_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/volunteer_description"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@id/volunteer_icon"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/volunteer_title"
                style="@style/mission_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/volunteer_title"
                app:layout_constraintEnd_toStartOf="@id/volunteer_icon"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/volunteer_description" />

            <ImageView
                android:id="@+id/volunteer_icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_volunteer_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>