<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="@color/white">

    <!-- 툴바 포함 -->
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- 아이디와 비밀번호 입력란 및 버튼들을 포함하는 컨테이너 -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="MissingConstraints">

        <!-- 아이디 입력란 -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_login_id"/>

                <EditText
                    android:id="@+id/editID"
                    android:hint="@string/id"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:maxLength="12"
                    android:inputType="text"
                    android:textSize="14sp"
                    android:fontFamily="@font/happiness_sans_title"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/white"
                    android:padding="8dp"/>
            </LinearLayout>

            <!-- 밑줄을 추가하는 View -->
            <View
                android:id="@+id/underlineID"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                android:layout_marginTop="10dp"/>
        </LinearLayout>

        <!-- 비밀번호 입력란 -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="8dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_password"/>

                <EditText
                    android:id="@+id/editPWD"
                    android:hint="@string/pwd"
                    android:textSize="14sp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/happiness_sans_title"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:maxLength="20"
                    android:padding="8dp"
                    android:backgroundTint="@color/white"
                    android:inputType="textPassword"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <!-- 비밀번호 입력란 밑의 밑줄 -->
            <View
                android:id="@+id/underlinePWD"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                android:layout_marginTop="10dp"/>
        </LinearLayout>

        <!-- 로그인 버튼 -->
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            android:stateListAnimator="@null"
            android:textColor="@color/white"
            style="@style/title"
            android:textSize="16sp"
            android:background="@drawable/button_login"/>

        <!-- 회원가입 버튼 -->
        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/join_done"
            style="@style/title"
            android:textSize="16sp"
            android:stateListAnimator="@null"
            android:textColor="@color/black"
            android:background="@drawable/button_login"
            android:backgroundTint="@color/light_gray"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
