<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mission.ui.WalkActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <Button
            style="@style/title"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:background="@drawable/bg_round_box2"
            android:text="@string/walk_4000"
            android:textColor="@color/white" />

        <Button
            style="@style/title"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_weight="1"
            android:background="@drawable/bg_round_box2"
            android:text="@string/walk_7000"
            android:textColor="@color/white" />

        <Button
            style="@style/title"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_gravity="end"
            android:layout_marginLeft="30dp"
            android:layout_weight="1"
            android:background="@drawable/bg_round_box2"
            android:text="@string/walk_10000"
            android:textColor="@color/white" />

        <!--        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_4000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/box_4000"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/bg_round_box2"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                />

            <TextView
                android:id="@+id/text_4000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4000"
                android:textColor="@color/white"
                style="@style/title"
                app:layout_constraintBottom_toBottomOf="@id/box_4000"
                app:layout_constraintEnd_toEndOf="@id/box_4000"
                app:layout_constraintStart_toStartOf="@id/box_4000"
                app:layout_constraintTop_toTopOf="@id/box_4000"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintVertical_bias="0.5"/>

            <ImageView
                android:id="@+id/box_7000"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/bg_round_box2"
                app:layout_constraintLeft_toRightOf="@id/box_4000"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginLeft="30dp"/>

            <TextView
                android:id="@+id/walk_7000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="7000"
                android:textColor="@color/white"
                style="@style/title"
                app:layout_constraintBottom_toBottomOf="@id/box_7000"
                app:layout_constraintEnd_toEndOf="@id/box_7000"
                app:layout_constraintStart_toStartOf="@id/box_7000"
                app:layout_constraintTop_toTopOf="@id/box_7000"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintVertical_bias="0.5"/>

            <ImageView
                android:id="@+id/box_10000"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/bg_round_box2"
                app:layout_constraintLeft_toRightOf="@id/box_7000"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/walk_10000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10000"
                android:textColor="@color/white"
                style="@style/title"
                app:layout_constraintBottom_toBottomOf="@id/box_10000"
                app:layout_constraintEnd_toEndOf="@id/box_10000"
                app:layout_constraintStart_toStartOf="@id/box_10000"
                app:layout_constraintTop_toTopOf="@id/box_10000"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintVertical_bias="0.5"/>
        </androidx.constraintlayout.widget.ConstraintLayout>-->
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintTop_toBottomOf="@id/top"
        android:background="@drawable/bg_round_box_stroke">

        <TextView
            android:id="@+id/current"
            style="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="현재"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/step_count"
            style="@style/walk_current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3,000"
            app:layout_constraintEnd_toEndOf="@id/current"
            app:layout_constraintStart_toStartOf="@+id/current"
            app:layout_constraintTop_toBottomOf="@id/current" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="걸음"
            style="@style/title"
            android:layout_marginLeft="1dp"
            app:layout_constraintBottom_toBottomOf="@+id/step_count"
            app:layout_constraintStart_toEndOf="@+id/step_count"
            app:layout_constraintTop_toBottomOf="@+id/current" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:progress="82"
            android:progressDrawable="@drawable/progress_bar_custom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/step_count" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:text="윙 받기"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/bg_round_box2"
        android:stateListAnimator="@null"
        style="@style/title"
        android:textColor="@color/white"
        />


</androidx.constraintlayout.widget.ConstraintLayout>